Revert "don't make temporary bytebuffers in Text"
This reverts commit 42de29040aa9efb22f385765496a426cdd39944a.